docker/kubernetes/be-channels-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: be-channels
  name: be-channels
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: be-channels
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: be-channels
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault    
      containers:
        - name: be-channels
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 999
            runAsGroup: 999      
          args:
            - uvicorn
            - app.main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
            - --proxy-headers
            - --workers
            - "4"
          volumeMounts:
          - name: output-volume
            mountPath: /opt/channelsdb/app/channels/output
          image: cerit.io/wernad/be-channels:3.0.14
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000/api/v1/health/ping
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "2"
              memory: "512M"
            limits:
              cpu: "4"
              memory: "2048M"
      volumes:
        - name: output-volume
          emptyDir: {}
      restartPolicy: Always
