docker/kubernetes/fe-channels-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fe-channels
  name: fe-channels
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fe-channels
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fe-channels
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault    
      containers:
        - name: fe-channels
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 101
            runAsGroup: 101      
          ports:
            - containerPort: 8080
              protocol: TCP
          image: cerit.io/wernad/fe-channels:1.0.7
          imagePullPolicy: Always
      restartPolicy: Always
