docker/kubernetes/pg-channels-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pg-channels
    pod-security.kubernetes.io/enforce: privileged
  name: pg-channels
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-channels
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: pg-channels
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
      containers:
        - name: pg-channels
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsGroup: 1000
          image: postgres:14
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: pg-channels
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "512M"
            limits:
              cpu: "1"
              memory: "1024M"
          volumeMounts:
            - name: channels-data
              mountPath: /var/lib/postgresql/data
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: channels-data
          persistentVolumeClaim:
            claimName: channels-data
