docker/kubernetes/fe-channels-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fe-channels
  name: fe-channels
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: fe-channels
