docker/kubernetes/fe-channels-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-channels-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "channelsdb.dyn.cloud.e-infra.cz"
      secretName: channelsdb-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "channelsdb.dyn.cloud.e-infra.cz"
    http:
      paths:
      - backend:
          service:
            name: fe-channels
            port:
              number: 8080
        pathType: ImplementationSpecific
